--- a/src/main/resources/templates/products/_newOrEdit.html
+++ b/src/main/resources/templates/products/_newOrEdit.html
@@ -51,7 +51,9 @@
                 </div>
 
                 <!-- CATEGORY -->
-                <div class="v-field">
+                <!-- TODO: Uncomment when Category feature is implemented -->
+                <!--
+                <div class="v-field" th:if="${categories != null}">
                     <label class="v-label" for="categoryId">Category</label>
                     <div class="v-control">
                         <select id="categoryId" class="v-input v-select" th:field="*{categoryId}" required>
@@ -66,6 +68,7 @@
                         <div class="v-error" th:if="${#fields.hasErrors('categoryId')}" th:errors="*{categoryId}"></div>
                     </div>
                 </div>
+                -->
 
                 <!-- ACTIVE -->
                 <div class="v-field">
